# alder

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: cel-evaluation.md  comparison-organize.md  config-reference.md  date-extraction.md  design.md  e2e-tests.md  json-output.md  known-limitations.md  semantic-types.md  walkthrough.md  watchman.md
src/: app_support.rs  config.rs  execute.rs  expr.rs  lib.rs  main.rs  notify.rs  path_utils.rs  pipeline.rs  planning.rs  render.rs  test_support.rs  watchman.rs
src/facts/: external.rs  file.rs  mod.rs  pdf.rs  spotlight.rs
tests/: e2e.rs
