[package]
name = "alder"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
clap = { version = "4.5.51", features = ["derive"] }
fs2 = "0.4.3"
globset = "0.4.18"
indexmap = { version = "2.12.1", features = ["serde"] }
minijinja = "2.12.0"
plist = "1.8.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.23.0"
